added Readme File and updated docker files

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-
+server.port=8001
+server.servlet.context-path=/api/v1
+spring.datasource.url=jdbc:sqlserver://localhost;databaseName=ManaalVentures;encrypt=false; trustServerCertificate=false;
+spring.datasource.username=sa
+spring.datasource.password=pass@word1
+spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.SQLServer2016Dialect
